2001-10-31  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* ccc.el:
	Modification concerning specificity.

	* skk-vars.el
	(skk-henkan-on)
	(skk-henkan-active): Abolish.

	(skk-henkan-mode): New variable.

	* experimental/skk-hint.el
	* skk-comp.el
	* skk-cursor.el
	* skk-dcomp.el
	* skk-isearch.el
	* skk-jisx0201.el
	* skk-kcode.el
	* skk-viper.el
	* skk-xemacs.el
	* skk.el
	* vip.el:
	Refer to `skk-henkan-mode'.

2001-10-29  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK
	* skk.el:
	More readable.

	* skk-dcomp.el
	(skk-dcomp-after-delete-backward-char): Call
	`skk-dcomp-do-comletion' even when `skk-marked-p' returns nil.

	(skk-set-henkan-point-subr): Advise to call
	`skk-dcomp-do-completion'.

2001-10-24  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el
	(skk-set-henkan-point): A little more readable.

2001-10-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-vars.el
	(skk-viper-saved-cursor-color): Make sure
	`viper-insert-state-cursor-color' is bound.

	(skk-menu-items): Call `skk-latin-region' instead of
	`skk-ascii-region'.

	* skk.el
	(skk-latin-region): Search char category j instead of category A
	or S.

	* skk-e21.el
	* skk-xemacs.el
	* skk.el:
	More specific.

2001-10-21  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el
	* skk-develop.el
	* skk-lookup.el
	* skk-obsolete.el
	* skk-viper.el:
	Modification concerning specificity.

	* skk-macs.el
	(skk-loop-for-buffers): Use `save-current-buffer' instead of
	`with-current-buffer'.

	* skk-look.el
	(skk-search-prog-list): Don't call `skk-splice-in' when MARK is
	nil.

	* skk-vars.el:
	Doc strings update.

2001-10-20  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* install-info.el
	(install-info-add-groups): Use `when' instead of `if'.

	* skk-look.el
	* skk-macs.el:
	More specific.

	* skk.el
	(skk-search-sagyo-henkaku): Accept an optional argument. Use
	`skk-substring', not `substring'.

	(skk-backward-and-set-henkan-point): Use `when' instead of `if'.

	* skk-jisx0201.el